fix: img width on mobile

--- a/styles.css
+++ b/styles.css
@@ -53,15 +53,10 @@ header {
 
 .card {
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
   min-height: 400px;
   margin-bottom: 4rem;
   max-width: 480px;
-}
-
-.card--reverse-wrap {
-  flex-wrap: wrap-reverse;
 }
 
 .card__content {
@@ -77,10 +72,16 @@ header {
 }
 
 .card img {
-  height: 100%;
+  width: 100%;
   max-height: 600px;
 }
 
 a {
   color: var(--links, #0f62fe)
+}
+
+@media(max-width: 530px) {
+  .card__content {
+    padding: 1rem 1rem;
+  }
 }
